styles/_mixins.scss
//
// MIXINS
// Common mixins for styles.
//

// Parallax effect for backgrounds
@mixin parallax-background($bg, $color: $half-black) {
  background: linear-gradient(
    $color,
    $color
    ), url($bg);
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
}

// Styles for big brand section
@mixin branding-section($margin-bottom: 150px, $margin-top: $margin-bottom) {
  &-content {
    margin-bottom: 200px;
    margin-top: 200px;
    text-align: center;

    h1 {
      color: $white;
      font-size: $font-size * 3;
    }

    .lead {
      color: fade-out($white, .2);

      a {
        color: inherit;
        text-decoration: underline;
      }
    }
  }
}

